--- a/BreadWallet/breadwallet.entitlements
+++ b/BreadWallet/breadwallet.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.dashfoundation.dash</string>
+		<string>group.org.dashfoundation.dash.mikekinney</string>
 	</array>
 </dict>
 </plist>
